Fix x-axis labels, not rotate, wrap them

--- a/apps/predict/static/css/heatmap.css
+++ b/apps/predict/static/css/heatmap.css
@@ -110,3 +110,7 @@
   padding: 0 1px;
 }
 
+#scatter_title {
+  margin-left: 20px;
+  font-weight: bold;
+}
